Template kubernetes files

--- a/jenkins/deployWithKubernetes/Jenkinsfile
+++ b/jenkins/deployWithKubernetes/Jenkinsfile
@@ -11,14 +11,21 @@ pipeline {
         stage ("startBack") {
             steps {
 		sh "ls -lrt"
-		sh "kubectl apply -f kubernates/back/backDeploy.yaml"
+		sh 'cat "kubernates/back/backDeploy.yaml.template" | sed "s/{{VERSION}}/${VERSION}}/g" > kubernates/back/backDeployTransform.yaml'
+		sh 'cat "kubernates/back/backDeploy.yaml.template" | sed "s/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g" > kubernates/back/backDeployTransform.yaml'
+		sh 'cat "kubernates/back/backDeploy.yaml.template" | sed "s/{{MY_LOGS}}/${MY_LOGS}}/g" > kubernates/back/backDeployTransform.yaml'
+		sh "kubectl apply -f kubernates/back/backDeployTransform.yaml"
                 sh "kubectl apply -f kubernates/back/backService.yaml" 
             }
         }
 
         stage ("stopFront") {
             steps {
-                sh "kubectl apply -f kubernates/front/frontDeploy.yaml" 
+		sh 'cat "kubernates/front/frontDeploy.yaml.template" | sed "s/{{VERSION}}/${VERSION}}/g" > kubernates/front/frontDeployTransform.yaml'
+		sh 'cat "kubernates/front/frontDeploy.yaml.template" | sed "s/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g" > kubernates/front/frontDeployTransform.yaml'
+		sh 'cat "kubernates/front/frontDeploy.yaml.template" | sed "s/{{MY_LOGS}}/${MY_LOGS}}/g" > kubernates/front/frontDeployTransform.yaml'
+		sh 'cat "kubernates/front/frontDeploy.yaml.template" | sed "s/{{DATABASE_DATA}}/${DATABASE_DATA}}/g" > kubernates/front/frontDeployTransform.yaml'
+                sh "kubectl apply -f kubernates/front/frontDeployTransform.yaml" 
                 sh "kubectl apply -f kubernates/front/frontService.yaml" 
             }
         }
