--- a/jenkins/deployWithKubernetes/Jenkinsfile
+++ b/jenkins/deployWithKubernetes/Jenkinsfile
@@ -11,21 +11,23 @@ pipeline {
         stage ("startBack") {
             steps {
 		sh "ls -lrt"
-		sh "cat kubernates/back/backDeploy.yaml.template | sed 's/{{VERSION}}/${VERSION}}/g' > kubernates/back/backDeployTransform.yaml"
-		sh "cat kubernates/back/backDeploy.yaml.template | sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g' > kubernates/back/backDeployTransform.yaml"
-		sh "cat kubernates/back/backDeploy.yaml.template | sed 's/{{MY_LOGS}}/${MY_LOGS}}/g' > kubernates/back/backDeployTransform.yaml"
-		sh "kubectl apply -f kubernates/back/backDeployTransform.yaml"
+		sh "cat kubernates/back/backDeployTemplate.yaml"
+		sg "sed 's/{{VERSION}}/${VERSION}}/g' >" 
+		sh "sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g'"
+		sh sed 's/{{MY_LOGS}}/${MY_LOGS}}/g'"
+		sh "kubectl apply -f kubernates/back/backDeployTemplate.yaml"
                 sh "kubectl apply -f kubernates/back/backService.yaml" 
             }
         }
 
         stage ("stopFront") {
             steps {
-		sh "cat kubernates/front/frontDeploy.yaml.template | sed 's/{{VERSION}}/${VERSION}}/g' > kubernates/front/frontDeployTransform.yaml"
-		sh "cat kubernates/front/frontDeploy.yaml.template | sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g' > kubernates/front/frontDeployTransform.yaml"
-		sh "cat kubernates/front/frontDeploy.yaml.template | sed 's/{{MY_LOGS}}/${MY_LOGS}}/g' > kubernates/front/frontDeployTransform.yaml"
-		sh "cat kubernates/front/frontDeploy.yaml.template | sed 's/{{DATABASE_DATA}}/${DATABASE_DATA}}/g' > kubernates/front/frontDeployTransform.yaml"
-                sh "kubectl apply -f kubernates/front/frontDeployTransform.yaml" 
+		sh "cat kubernates/front/frontDeployTemplate.yaml"
+		sh "sed 's/{{VERSION}}/${VERSION}}/g'"
+		sh "sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}}/g'"
+		sh "sed 's/{{MY_LOGS}}/${MY_LOGS}}/g'"
+		sh "sed 's/{{DATABASE_DATA}}/${DATABASE_DATA}}/g'"
+                sh "kubectl apply -f kubernates/front/frontDeployTemplate.yaml" 
                 sh "kubectl apply -f kubernates/front/frontService.yaml" 
             }
         }
