--- a/jenkins/deployWithKubernetes/Jenkinsfile
+++ b/jenkins/deployWithKubernetes/Jenkinsfile
@@ -13,8 +13,8 @@ pipeline {
 		sh "ls -lrt"
 		sh "cat kubernates/back/backDeployTemplate.yaml"
 		sh "sed 's/{{VERSION}}/${VERSION}/g'" 
-		sh "sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}/g'"
-		sh "sed 's/{{MY_LOGS}}/${MY_LOGS}/g'"
+		sh "sed 's+{{REPO_NEXUS_URL}}+${REPO_NEXUS_URL}+g'"
+		sh "sed 's+{{MY_LOGS}}+${MY_LOGS}+g'"
 		sh "kubectl apply -f kubernates/back/backDeployTemplate.yaml"
                 sh "kubectl apply -f kubernates/back/backService.yaml" 
             }
@@ -23,10 +23,10 @@ pipeline {
         stage ("stopFront") {
             steps {
 		sh "cat kubernates/front/frontDeployTemplate.yaml"
-		sh "sed 's/{{VERSION}}/${VERSION}/g'"
-		sh "sed 's/{{REPO_NEXUS_URL}}/${REPO_NEXUS_URL}/g'"
-		sh "sed 's/{{MY_LOGS}}/${MY_LOGS}/g'"
-		sh "sed 's/{{DATABASE_DATA}}/${DATABASE_DATA}/g'"
+		sh "sed 's+{{VERSION}}+${VERSION}+g'"
+		sh "sed 's+{{REPO_NEXUS_URL}}+${REPO_NEXUS_URL}+g'"
+		sh "sed 's+{{MY_LOGS}}+${MY_LOGS}+g'"
+		sh "sed 's+{{DATABASE_DATA}}+${DATABASE_DATA}+g'"
                 sh "kubectl apply -f kubernates/front/frontDeployTemplate.yaml" 
                 sh "kubectl apply -f kubernates/front/frontService.yaml" 
             }
