--- a/jenkins/deployWithKubernetes/Jenkinsfile
+++ b/jenkins/deployWithKubernetes/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
 		sh "sed 's/{{VERSION}}/${VERSION}/g'" 
 		sh "sed 's+{{REPO_NEXUS_URL}}+${REPO_NEXUS_URL}+g'"
 		sh "sed 's+{{MY_LOGS}}+${MY_LOGS}+g'"
+		sh "cat kubernates/back/backDeployTemplate.yaml"
 		sh "kubectl apply -f kubernates/back/backDeployTemplate.yaml"
                 sh "kubectl apply -f kubernates/back/backService.yaml" 
             }
@@ -27,6 +28,7 @@ pipeline {
 		sh "sed 's+{{REPO_NEXUS_URL}}+${REPO_NEXUS_URL}+g'"
 		sh "sed 's+{{MY_LOGS}}+${MY_LOGS}+g'"
 		sh "sed 's+{{DATABASE_DATA}}+${DATABASE_DATA}+g'"
+		sh "cat kubernates/front/frontDeployTemplate.yaml"
                 sh "kubectl apply -f kubernates/front/frontDeployTemplate.yaml" 
                 sh "kubectl apply -f kubernates/front/frontService.yaml" 
             }
