--- a/jenkins/deployWithKubernetes/Jenkinsfile
+++ b/jenkins/deployWithKubernetes/Jenkinsfile
@@ -26,6 +26,8 @@ pipeline {
 		sh "sed -i 's+{{VERSION}}+${VERSION}+g' kubernates/front/frontDeployTemplate.yaml"
 		sh "sed -i 's+{{REPO_NEXUS_URL}}+${REPO_NEXUS_URL}+g' kubernates/front/frontDeployTemplate.yaml"
 		sh "sed -i 's+{{MY_LOGS}}+${MY_LOGS}+g' kubernates/front/frontDeployTemplate.yaml"
+		sh "sed -i 's+{{ANGULAR_CONFIG}}+${ANGULAR_CONFIG}+g' kubernates/front/frontDeployTemplate.yaml"
+
 		sh "cat kubernates/front/frontDeployTemplate.yaml"
                 sh "kubectl apply -f kubernates/front/frontDeployTemplate.yaml" 
                 sh "kubectl apply -f kubernates/front/frontService.yaml" 
