--- a/jenkins/deployWithDockerCompose/Jenkinsfile
+++ b/jenkins/deployWithDockerCompose/Jenkinsfile
@@ -24,6 +24,7 @@ pipeline {
                 sh "echo DATABASE_DATA=${DATABASE_DATA} >> jenkins/deployWithDockerCompose/.env"
                 sh "echo VERSION=${VERSION} >> jenkins/deployWithDockerCompose/.env"
                 sh "echo REPO_NEXUS_URL=${REPO_NEXUS_URL} >> jenkins/deployWithDockerCompose/.env"
+                sh "echo ANGULAR_CONFIG=${ANGULAR_CONFIG} >> jenkins/deployWithDockerCompose/.env"
                 sh "cat jenkins/deployWithDockerCompose/.env" 
             }
         }
