--- a/StationDemoWeb/docker/conf/web.xml
+++ b/StationDemoWeb/docker/conf/web.xml
@@ -4722,5 +4722,14 @@
         <welcome-file>index.htm</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+ 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/404.html</location>
+    </error-page>
+    <error-page>
+	<error-code>500</error-code>
+	<location>/500.html</location>
+    </error-page>
 
 </web-app>
