--- a/StationDemoWeb/docker/conf/web.xml
+++ b/StationDemoWeb/docker/conf/web.xml
@@ -4724,6 +4724,10 @@
     </welcome-file-list>
  
     <error-page>
+        <error-code>401</error-code>
+        <location>/401.html</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
         <location>/404.html</location>
     </error-page>
