--- a/ansible/deploiement/deploy_station.yaml
+++ b/ansible/deploiement/deploy_station.yaml
@@ -1,3 +1,8 @@
+- name: "Preparation deploiement"
+  hosts: allserver 
+  roles:
+   - role: "preparedeploy"
+
 - name: "Deploiement backend"
   hosts: backend 
   roles:
