--- a/ansible/deploiement/roles/preparedeploy/tasks/main.yaml
+++ b/ansible/deploiement/roles/preparedeploy/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Preparation deploiement 
   debug:
-    msg: "Preparation deploiement"
+    msg: "Preparation deploiement environnement {{environnement}}"
 
 
 - name: Verifie existence repertoire tmp
