--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	   <springbatch.version>4.2.1.RELEASE</springbatch.version>
 	   <springboot.version>2.2.2.RELEASE</springboot.version>
 	   <springsecurity.version>5.2.1.RELEASE</springsecurity.version>
+	   <springredis.version>2.2.3.RELEASE</springredis.version>
 	   <springjwt.version>1.1.0.RELEASE</springjwt.version>
 	   <java-jwt.version>3.8.3</java-jwt.version>
 	   <okta-jwt.version>0.3.0</okta-jwt.version>
@@ -319,6 +320,12 @@
 			<groupId>org.tuckey</groupId>
 			<artifactId>urlrewritefilter</artifactId>
 			<version>${urlrewriterfilter.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>${springredis.version}</version>
 		</dependency>
 
 			
