Unit test with redis

--- a/pom.xml
+++ b/pom.xml
@@ -327,6 +327,13 @@
 			<artifactId>spring-data-redis</artifactId>
 			<version>${springredis.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${jedis.version}</version>
+      </dependency>
+ 
 
 			
 			
