--- a/StationDemoWeb/pom.xml
+++ b/StationDemoWeb/pom.xml
@@ -106,6 +106,11 @@
 			<artifactId>spring-test</artifactId>
 		 </dependency>	
 		 
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
+		</dependency>
+		 
 		 
 		 <!-- Security -->
 		 <dependency>
