--- a/StationDemoWeb/src/main/resources/application.properties
+++ b/StationDemoWeb/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 redis.hostname=localhost
 redis.port=5679
 redis.password=toto
+
+okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
+okta.clientId=0oaeg3yghaL9mQalz0h7
