--- a/StationDemoBatch/pom.xml
+++ b/StationDemoBatch/pom.xml
@@ -26,6 +26,13 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>	
+		
+		
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 		 </dependency>				
