Montee version image docker 1.0.9 prise en compte redis**

--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - DB_TRAFSTAT_MAXACTIVE=100
       - DB_TRAFSTAT_USERNAME=stationuser  
       - DB_TRAFSTAT_PASSWORD=stationpwd
-      - REDIS_HOSTNAME=localhost
+      - REDIS_HOSTNAME=127.0.0.1
       - REDIS_PORT=6000
       - REDIS_PASS=test650
     ports:
