--- a/jenkins/deployWithDockerCompose/docker-compose.yml
+++ b/jenkins/deployWithDockerCompose/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       restart_policy:
         condition: on-failure
     restart: always
-    command: redis-server --requirepass test650
+    command: redis-server --bind station_redis --port 6000 --requirepass test650
     ports:
       - "6000:6379"      
       
