--- a/StationDemoWeb/src/main/resources/application.properties
+++ b/StationDemoWeb/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 redis.hostname=localhost
 redis.port=6379
 redis.password=test55
+redis.usessl=false
 
 okta.issuerUrl=https://dev-884254.oktapreview.com/oauth2/default
 okta.clientId=0oaeg3yghaL9mQalz0h7
