--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ ansible/work/
 ansible/tmp
 ansible/saslivraison/*.war
 ansible/saslivraison/configuration.json
+*.lock.hcl
 
 # Logs and databases #
 
