--- a/helm/station/templates/stationback-ingress.yaml
+++ b/helm/station/templates/stationback-ingress.yaml
@@ -13,7 +13,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /StationDemoSecureWeb 
         pathType: Prefix
         backend:
           service:
