--- a/helm/station/templates/stationfront-ingress.yaml
+++ b/helm/station/templates/stationfront-ingress.yaml
@@ -17,4 +17,4 @@ spec:
           service:
             name: stationfrontservice
             port:
-              number: {{ .Values.stationfront.service.externalPort }} 
+              number: {{ .Values.stationfront.service.internalPort }} 
