--- a/helm/station/templates/stationdb-deployment.yaml
+++ b/helm/station/templates/stationdb-deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stationback-deploy
+  name: stationdb-deploy
   namespace: {{ .Release.Namespace | quote }}
 spec:
   # A deployment's specification really only 
   # has a few useful options
   
   # 1. How many copies of each pod do we want?
-  replicas: {{ .Values.stationback.nbReplicas }}
+  replicas: 1 
 
   # 2. Which pods are managed by this deployment?
   selector:
     # This must match the labels we set on the pod!
     matchLabels:
-      app:  stationback
+      app:  stationdb
   
   # This template field is a regular pod configuration 
   # nested inside the deployment spec
@@ -23,21 +23,28 @@ spec:
       # Set labels on the pod.
       # This is used in the deployment selector.
       labels:
-        app: stationback
+        app: stationdb
     spec:
       containers:
-        - name: stationback
-          image: {{ template "stationback.image.label" . }} 
-          imagePullPolicy: {{ .Values.stationback.image.pullPolicy | quote }}
-          env: 
-          - name: DB_TRAFSTAT_URL
-            value: {{ template "stationback.databaseUrl" . }}
-          - name: DB_TRAFSTAT_MAXACTIVE
-            value: {{ .Values.stationback.nbConnectionDbMaxActive | quote}}
-          - name: DB_TRAFSTAT_USERNAME
+        - name: stationdb
+          image: {{ template "stationdb.image.label" .  }}
+          imagePullPolicy: {{ .Values.stationdb.image.pullPolicy | quote }}
+          env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: {{ .Values.stationdb.mysqlRootPassword | quote  }}
+          - name: MYSQL_DATABASE
+            value: "StationDemoDb"
+          - name: MYSQL_USER
             value: {{ .Values.stationdb.mysqlUser | quote  }}
-          - name: DB_TRAFSTAT_PASSWORD
+          - name: MYSQL_PASSWORD
             value: {{ .Values.stationdb.mysqlPassword | quote  }}
+          volumeMounts:
+          - name: datastationdb  
+            mountPath: /var/lib/mysql
           ports:
-          - containerPort: 8080
+          - containerPort: 3306
             protocol: TCP
+      volumes:
+      - name: datastationdb 
+        persistentVolumeClaim: 
+          claimName: datastationdb  
